--- a/index.html
+++ b/index.html
@@ -5,21 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
- 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
+
     <title>Meet Rachel</title>
   </head>
-
-  <navbar>rachel</navbar>
   <body>
+  
+  <span><ul>
+  <li class="name">rachelstroy</li> 
+
+  <li><a href="news.asp">github</a></li>
+  <li><a href="contact.asp">linkedin</a></li>
+  <li><a href="about.asp">IG</a></li>
+</ul>
+</span>
+
 
   <main>
+
+
   <img src="photo"></img>
 
-  <h1 class="largetext"> Nice to meet you! <br> I'm Rachel Stroy.</h1>
-  <small class="smalltext">Based in Paris, I'm a front-end developer passionate about building acessible apps that users love. </small>
+  <h1 class="largetext"> Nice to meet you! <br> I'm <span class="line">Crystal Quest.</span>
+</h1>
+  <p class="smalltext
 
-  <div> CONTACT ME<a href = "contact.js"> </a></div>
+  ">Based in Paris, I'm a front-end developer   <br>passionate about building acessible apps  <br
+  >that users love. </p>
 
+  <br>
+  <br>
+  <div class="line"> CONTACT ME<a href = "contact.js"> </a></div>
+ <br>
+ <br>
+
+ <br>
+ 
   </main>
 
   <section class="sec-two">
