--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+
+
+
+
+
 <img lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,25 +19,19 @@
   <body>
   
   <span><ul>
-  <li class="name">rachelstroy</li> 
-
+  <li class="name">crystalquest</li> 
   <li><a href="news.asp">github</a></li>
   <li><a href="contact.asp">linkedin</a></li>
   <li><a href="about.asp">IG</a></li>
 </ul>
 </span>
 
-
   <main>
-
-
-  <img src="photo"></img>
-
+<br>
+<br><br>
   <h1 class="largetext"> Nice to meet you! <br> I'm <span class="line">Crystal Quest.</span>
 </h1>
-  <p class="smalltext
-
-  ">Based in Paris, I'm a front-end developer   <br>passionate about building acessible apps  <br
+  <p class="smalltext">Based in Paris, I'm a front-end developer   <br>passionate about building acessible apps  <br
   >that users love. </p>
 
   <br>
@@ -45,31 +44,53 @@
  
   </main>
 
+
+
+  <hr>
   <section class="sec-two">
-<hr>
-    <ul> 
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Javascript</li>
-    <li>
-      Accesibility
-    </li>
-    <li>React</li>
-    <li>Sass</li>
-    </ul>
- 
-<h2>Projects</h2>
+
+<div class="grid">
+  <li>HTML<div class="exp"> 1 Year Experience</div></li>
+  <li>CSS<div class="exp"> 1 Year Experience</div></li>
+  <li>Javascript<div class="exp"> 1 Year Experience</div></li>
+  <li>React<div class="exp"> 1 Year Experience</div></li>
+  <li>Python<div class="exp"> 1 Year Experience</div></li>
+ <li>Sass<div class="exp"> 1 Year Experience</div></li>
+</div>
 </section>
 
-<section class ='contact'>
-<h2>Contact</h2>
-  <p>I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p>
+<section class="sec-three">
+  <br><br><br><br><br>
+
+ <div class ="header-2">
+<span class="largetext">Projects</span><span class="line2">CONTACT ME</span>
+</div> 
+
+<div class = "container">
+  <li>Fitness Profile</li>
+  <li>To Do App</li>
+  <li>Memory</li>
+  <li>Weather</li>
+  <li>Tra
+    
+  <li>Dictionary</li>
+
+  </div>
+
+<br><br><br><br><br>
+<section class = 
+"container2">
+
+<div class="contact"> <h2>Contact</h2> <p>I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p></div>
   
  <form>
   </form>
 
-<hr>
+
+</section>
+
   <footer>
+<hr>
  <div>rachel</div>
  <span>
   <ul>
