--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-
-
-
-
-
 <img lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,7 +12,7 @@
     <title>Meet Rachel</title>
   </head>
   <body>
-  
+  <nav>
   <span><ul>
   <li class="name">crystalquest</li> 
   <li><a href="news.asp">github</a></li>
@@ -25,7 +20,7 @@
   <li><a href="about.asp">IG</a></li>
 </ul>
 </span>
-
+</nav>
   <main>
 <br>
 <br><br>
@@ -77,24 +72,37 @@
 
   </div>
 
-<br><br><br><br><br>
-<section class = 
-"container2">
 
-<div class="contact"> <h2>Contact</h2> <p>I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p></div>
-  
- <form>
-  </form>
-
-
+<br><br><br><br>
 </section>
 
-  <footer>
-<hr>
- <div>rachel</div>
- <span>
-  <ul>
- <li>icon</li> <li>icon</li> <li>icon</li></ul>
- </span>
+<div class ="container2">
+  <div class= "h2">Contact
+<p>
+  I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p></div>
+  <form>
+  <input type="text" placeholder="Name"> <br>
+   <input type="text" placeholder="Email"> <br>
+    <input type="text" placeholder="Message"> <br>
+    <button type="submit">Send Message</button>
+  </form>
+</div>
+</div>
+
+</section>
+<footer>
+ <nav class="footer">
+  <span><ul>
+  <li class="name">crystalquest</li> 
+  <li><a href="news.asp">github</a></li>
+  <li><a href="contact.asp">linkedin</a></li>
+  <li><a href="about.asp">IG</a></li>
+  
+</ul>
+</span>
+</nav>
+</footer>
   </body>
 </html>
+
+
