--- a/index.html
+++ b/index.html
@@ -22,29 +22,31 @@
 </span>
 </nav>
   <main>
+    <img class="rings" src="https://singlepage-developer-portfolio.vercel.app/pattern-rings.be49833a.svg" alt="">
+
 <br>
 <br><br>
+<div class="header">
   <h1 class="largetext"> Nice to meet you! <br> I'm <span class="line">Crystal Quest.</span>
 </h1>
-  <p class="smalltext">Based in Paris, I'm a front-end developer   <br>passionate about building acessible apps  <br
+  <p class="smalltext">Based in Paris, I'm a front-end developer <br>passionate about building acessible apps  <br
   >that users love. </p>
+  <br>
 
   <br>
-  <br>
-  <div class="line"> CONTACT ME<a href = "contact.js"> </a></div>
- <br>
- <br>
 
+
+
+  <span class="line2"> CONTACT ME<a href = "contact.js"> </a></span>
  <br>
- 
+ <br>
+ <br>
   </main>
-
-
-
   <hr>
   <section class="sec-two">
 
-<div class="grid">
+<div class="skills">
+
   <li>HTML<div class="exp"> 1 Year Experience</div></li>
   <li>CSS<div class="exp"> 1 Year Experience</div></li>
   <li>Javascript<div class="exp"> 1 Year Experience</div></li>
@@ -61,14 +63,22 @@
 <span class="largetext">Projects</span><span class="line2">CONTACT ME</span>
 </div> 
 
-<div class = "container">
-  <li>Fitness Profile</li>
-  <li>To Do App</li>
-  <li>Memory</li>
-  <li>Weather</li>
-  <li>Tra
-    
-  <li>Dictionary</li>
+<div class ="container">
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-1-small.101f0206.webp" alt="Design portfolio"></img>
+
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-2-small.28072718.webp" alt="E-learning">
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-3-small.1ee882fd.webp" alt="Todo web app">
+
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-4-small.8d6102b1.webp" alt="Entertainment web app">
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-6-small.9d362b79.webp" alt="Art gallery app">
+
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-5-small.657a3411.webp"  alt="Memory Game">
 
   </div>
 
@@ -82,10 +92,11 @@
   I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p></div>
   <form>
   <input type="text" placeholder="Name"> <br>
-   <input type="text" placeholder="Email"> <br>
-    <input type="text" placeholder="Message"> <br>
-    <button type="submit">Send Message</button>
+   <input type="email" placeholder="Email"> <br>
+    <input type="text" placeholder="Message" id="notes">   
+    <button type="submit">SEND MESSAGE</button>
   </form>
+
 </div>
 </div>
 
@@ -103,6 +114,7 @@
 </nav>
 </footer>
   </body>
+
 </html>
 
 
