--- a/index.html
+++ b/index.html
@@ -26,25 +26,24 @@
 
 <br>
 <br><br>
+ <img class="photo" src="https://user-images.githubusercontent.com/114012059/206208843-c05886c1-f1c8-467e-981e-98bf68033914.png"  alt="woman smiling">
+
 <div class="header">
-  <h1 class="largetext"> Nice to meet you! <br> I'm <span class="line">Crystal Quest.</span>
+  <h1 class="largetext"> Nice to meet you! <br> I'm <span class="line">Crystal Best.</span>
 </h1>
   <p class="smalltext">Based in Paris, I'm a front-end developer <br>passionate about building acessible apps  <br
   >that users love. </p>
-  <br>
 
-  <br>
-
-
+</div>
 
   <span class="line2"> CONTACT ME<a href = "contact.js"> </a></span>
  <br>
  <br>
  <br>
   </main>
-  <hr>
-  <section class="sec-two">
-
+ 
+ <section class="sec-two">
+ <hr>
 <div class="skills">
 
   <li>HTML<div class="exp"> 1 Year Experience</div></li>
@@ -65,22 +64,25 @@
 
 <div class ="container">
 
-<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-1-small.101f0206.webp" alt="Design portfolio"></img>
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-1-small.101f0206.webp" alt="Design portfolio"> 
+
 
 
 <img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-2-small.28072718.webp" alt="E-learning">
 
-<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-3-small.1ee882fd.webp" alt="Todo web app">
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-3-small.1ee882fd.webp" alt="Todo web app"> 
 
 
-<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-4-small.8d6102b1.webp" alt="Entertainment web app">
 
-<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-6-small.9d362b79.webp" alt="Art gallery app">
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-4-small.8d6102b1.webp" alt="Entertainment web app"> 
+
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-6-small.9d362b79.webp" alt="Art gallery app"> 
 
 
-<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-5-small.657a3411.webp"  alt="Memory Game">
 
+<img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-5-small.657a3411.webp"  alt="Memory Game">  
   </div>
+
 
 
 <br><br><br><br>
