--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
 
-    <title>Meet Rachel</title>
+    <title>Meet Crystal</title>
   </head>
   <body>
   <nav>
   <span><ul>
-  <li class="name">crystalquest</li> 
+  <li class="name">crystalbest</li> 
   <li><a href="news.asp">github</a></li>
   <li><a href="contact.asp">linkedin</a></li>
   <li><a href="about.asp">IG</a></li>
@@ -46,12 +46,12 @@
  <hr>
 <div class="skills">
 
-  <li>HTML<div class="exp"> 1 Year Experience</div></li>
-  <li>CSS<div class="exp"> 1 Year Experience</div></li>
-  <li>Javascript<div class="exp"> 1 Year Experience</div></li>
-  <li>React<div class="exp"> 1 Year Experience</div></li>
+  <li>HTML<div class="exp"> 3 Year Experience</div></li>
+  <li>CSS<div class="exp"> 3 Year Experience</div></li>
+  <li>Javascript<div class="exp"> 2 Year Experience</div></li>
+  <li>React<div class="exp"> 2 Year Experience</div></li>
   <li>Python<div class="exp"> 1 Year Experience</div></li>
- <li>Sass<div class="exp"> 1 Year Experience</div></li>
+ <li>Sass<div class="exp"> 3 Year Experience</div></li>
 </div>
 </section>
 
@@ -89,9 +89,13 @@
 </section>
 
 <div class ="container2">
+  
   <div class= "h2">Contact
 <p>
-  I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p></div>
+  I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p>
+<img class="rings2" src="https://singlepage-developer-portfolio.vercel.app/pattern-rings.be49833a.svg" alt="">
+ </div>
+ 
   <form>
   <input type="text" placeholder="Name"> <br>
    <input type="email" placeholder="Email"> <br>
@@ -106,7 +110,7 @@
 <footer>
  <nav class="footer">
   <span><ul>
-  <li class="name">crystalquest</li> 
+  <li class="name">crystalbest</li> 
   <li><a href="news.asp">github</a></li>
   <li><a href="contact.asp">linkedin</a></li>
   <li><a href="about.asp">IG</a></li>
@@ -115,6 +119,11 @@
 </span>
 </nav>
 </footer>
+
+
+    </a>
+  </div>
+</nav>
   </body>
 
 </html>
