--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
 
+<script src="https://kit.fontawesome.com/dd4a8af04a.js" crossorigin="anonymous"></script>
+
     <title>Meet Crystal</title>
   </head>
   <body>
-  <nav>
+ 
+  <main>
+     <nav>
   <span><ul>
   <li class="name">crystalbest</li> 
-  <li><a href="news.asp">github</a></li>
-  <li><a href="contact.asp">linkedin</a></li>
-  <li><a href="about.asp">IG</a></li>
+  <li><a href="news.asp"><i class="fa-brands fa-github"></i></a></li>
+  <li><a href="contact.asp"><i class="fa-brands fa-linkedin"></i></a></li>
+  <li><a href="about.asp"><i class="fa-brands fa-twitter"></i></a></li>
 </ul>
 </span>
 </nav>
-  <main>
     <img class="rings" src="https://singlepage-developer-portfolio.vercel.app/pattern-rings.be49833a.svg" alt="">
 
 <br>
@@ -67,12 +70,9 @@
 <img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-1-small.101f0206.webp" alt="Design portfolio"> 
 
 
-
 <img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-2-small.28072718.webp" alt="E-learning">
 
 <img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-3-small.1ee882fd.webp" alt="Todo web app"> 
-
-
 
 <img src="https://singlepage-developer-portfolio.vercel.app/thumbnail-project-4-small.8d6102b1.webp" alt="Entertainment web app"> 
 
@@ -109,12 +109,12 @@
 </section>
 <footer>
  <nav class="footer">
+   <nav>
   <span><ul>
   <li class="name">crystalbest</li> 
-  <li><a href="news.asp">github</a></li>
-  <li><a href="contact.asp">linkedin</a></li>
-  <li><a href="about.asp">IG</a></li>
-  
+  <li><a href="news.asp"><i class="fa-brands fa-github"></i></a></li>
+  <li><a href="contact.asp"><i class="fa-brands fa-linkedin"></i></a></li>
+  <li><a href="about.asp"><i class="fa-brands fa-twitter"></i></a></li>
 </ul>
 </span>
 </nav>
