--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <span><ul>
   <li class="name">crystalbest</li> 
   <li><a href="news.asp"><i class="fa-brands fa-github"></i></a></li>
-  <li><a href="contact.asp"><i class="fa-brands fa-linkedin"></i></a></li>
+  <li><a href="#contact_me"><i class="fa-brands fa-linkedin"></i></a></li>
   <li><a href="about.asp"><i class="fa-brands fa-twitter"></i></a></li>
 </ul>
 </span>
@@ -39,7 +39,7 @@
 
 </div>
 
-  <span class="line2"> CONTACT ME<a href = "contact.js"> </a></span>
+  <span class="line2"> <a href="#contact_me">CONTACT ME</a></span>
  <br>
  <br>
  <br>
@@ -62,7 +62,7 @@
   <br><br><br><br><br>
 
  <div class ="header-2">
-<span class="largetext">Projects</span><span class="line2">CONTACT ME</span>
+<span class="largetext">Projects</span><span class="line2">CONTACT ME</span></a>
 </div> 
 
 <div class ="container">
@@ -90,7 +90,7 @@
 
 <div class ="container2">
   
-  <div class= "h2">Contact
+  <div class= "h2"><a id="contact_me">Contact</a>
 <p>
   I would love to hear about your project and how I could help. Please fill in the form and I'll be in touch shortly.</p>
 <img class="rings2" src="https://singlepage-developer-portfolio.vercel.app/pattern-rings.be49833a.svg" alt="">
@@ -112,9 +112,9 @@
    <nav>
   <span><ul>
   <li class="name">crystalbest</li> 
-  <li><a href="news.asp"><i class="fa-brands fa-github"></i></a></li>
-  <li><a href="contact.asp"><i class="fa-brands fa-linkedin"></i></a></li>
-  <li><a href="about.asp"><i class="fa-brands fa-twitter"></i></a></li>
+  <li><a href="news"><i class="fa-brands fa-github"></i></a></li>
+  <li><a href="contact"><i class="fa-brands fa-linkedin"></i></a></li>
+  <li><a href="about"><i class="fa-brands fa-twitter"></i></a></li>
 </ul>
 </span>
 </nav>
