--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Chonburi&family=Major+Mono+Display&family=Poppins:wght@100;200;400;800&family=Vina+Sans&family=Ysabeau:wght@1;400&display=swap" rel="stylesheet">
 
 
-    <title>Flavors</title>
+    <title>Win & Juice</title>
   </head>
   <body>
     <div class="container">
